fixed problem contents overflow screen height

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -214,12 +214,10 @@ header .rightButton:after {
 }
 
 .main-pane {
-  padding-bottom: 10px;
-  position: relative;
+  position: absolute;
   top: 35px;
   bottom: 0;
   width: 100%;
-  height: 100%;
   background-color: #3D434B;
   -webkit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
